--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
   "config": {
     "sort-packages": true
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {
     "unzerdev/php-sdk": "^1.1.3.0",
-    "pimcore/pimcore": "^10.0.0"
+    "pimcore/pimcore": "^11.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.9"
