--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "unzerdev/php-sdk": "^1.1.3.0",
     "pimcore/pimcore": "^11.0",
-    "pimcore/ecommerce-framework-bundle": "1.x-dev"
+    "pimcore/ecommerce-framework-bundle": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.9"
